tests/valid/valid_special_numbers_with_signs.csl
config SpecialNumbersSigned {
  posInf: number = +inf;
  negInf: number = -inf;
  posNaN: number = +nan;
  negNaN: number = -nan;
}
