tests/invalid/invalid_unclosed_backtick_identifier.csl
config InvalidQuotedId {
  `not-closed: number;
}
